--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+    <link rel="icon" type="image/png" href="logo.jpeg"/>
     <title>Maika</title>
 </head>
 <body>
@@ -82,6 +83,35 @@
                 </div>                
             </div>
         </div>
+
+        <div class="about bg-[#502779] text-white py-10 px-4">
+            <div class="container mx-auto flex flex-col md:flex-row items-center justify-between space-y-8 md:space-y-0">
+                <!-- Text Content on the Left -->
+                <div class="text-content md:w-1/2 md:mr-12">
+                    <h1 class="text-4xl font-extrabold mb-4">ABOUT ME</h1>
+                    <p class="text-lg md:text-xl mb-6">I’m Maika Ybiza Simbulan, a 21-year-old fourth-year student at Bulacan State University specializing in Business Analytics. As a motivated and technically proficient developer with a strong focus on full-stack development, I’m passionate about problem-solving. I’m eager to contribute to meaningful projects while further enhancing my skills in modern development practices.</p>
+                    
+                    <h3 class="text-2xl font-semibold mb-4">Soft Skills</h3>
+                    <div class="border-4 p-4 rounded-lg">
+                        <ul class="list-disc ml-5 space-y-2">
+                            <li>Leadership & Planning Skills</li>
+                            <li>Time Management</li>
+                            <li>Multi-tasking</li>
+                            <li>Flexibility and Fast Learner</li>
+                            <li>Attention to Details</li>
+                            <li>Problem Solving & Critical Thinking</li>
+                        </ul>
+                    </div>
+                </div>
+        
+                <!-- Image on the Right -->
+                <div class="image-section md:w-1/2 flex justify-center md:justify-end md:ml-12">
+                    <img src="bg.png" alt="Maika" class="w-full h-full md:w-full md:h-[600px] object-cover shadow-lg">
+                </div>
+            </div>
+        </div>        
+
+
     </div>
 
     <script>
