--- a/index.html
+++ b/index.html
@@ -111,7 +111,104 @@
             </div>
         </div>        
 
+        <div class="technical py-10 bg-gray-100">
+            <div class="container mx-auto text-center">
+                <h1 class="text-4xl font-extrabold mb-8 text-[#502779]">TECHNICAL SKILLS</h1>
+                <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-6">
+                    <div class="skill-card">
+                        <img src="technical/bootstrap.jpeg" alt="Bootstrap" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Bootstrap</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/c++.png" alt="C++" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">C++</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/css.jpeg" alt="CSS" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">CSS</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/figma.jpeg" alt="Figma" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Figma</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/firebase.jpeg" alt="Firebase" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Firebase</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/git.jpeg" alt="Git" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Git</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/html.jpeg" alt="Html" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Html</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/intelliJ.png" alt="IntelliJ" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">IntelliJ</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/java.jpeg" alt="Java" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Java</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/javascript.jpeg" alt="Javascript" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Javascript</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/jquery.jpeg" alt="JQuery" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">JQuery</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/mysql.jpeg" alt="MySQL" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">MySQL</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/notion.png" alt="Notion" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Notion</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/php.png" alt="PHP" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">PHP</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/postman.svg" alt="Postman" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Postman</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/powerbi.png" alt="PowerBI" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">PowerBI</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/python.jpeg" alt="Python" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Python</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/r.png" alt="R" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">R</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/react.jpeg" alt="React" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">React</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/spss.png" alt="SPSS" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">SPSS</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/tailwind.jpeg" alt="Tailwind" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">Tailwind</p>
+                    </div>
+                    <div class="skill-card">
+                        <img src="technical/vscode.svg" alt="VSCode" class="skill-image">
+                        <p class="text-sm md:text-base font-medium mt-2">VSCode</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+
+        
     </div>
 
     <script>
