correct the resume button

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="cv_simbulan.pdf" class="resume-link hover:opacity-80" target="_blank">
-                        MY RESUME
+                        RESUME
                     </a>
                     <a href="https://www.facebook.com/maika.ordonez.3/" class="social-icon hover:opacity-80" target="_blank">
                         <i class="fab fa-facebook-f"></i>
